--- a/app/index.html
+++ b/app/index.html
@@ -2,236 +2,91 @@
 <html>
 <head>
 	<title>mini-chat</title>
-	<style>
-		html, body {
-			height:100%;
-		}
-		body {
-			background:#d2e6f7;
-			position:relative;
-			padding:0;margin:0;
-		}
-		.clearfix:before,
-		.clearfix:after {
-			content:" ";
-			display:table;
-		}
-		.clearfix:after {
-			clear:both;
-		}
-
-		#chat {
-			position:absolute;
-			width:600px;
-			top:50%;left:50%;
-			transform:translateX(-50%) translateY(-50%);
-		}
-		#chat h1 {
-			font:40px Helvetica, Arial;
-			color:#999;
-			margin:0 0 30px;
-			padding:0;
-		}
-		#chat .conversation {
-			overflow:auto;
-			height:300px;
-			background:#FFF;
-			border-radius:20px;
-			border-top-left-radius:0px;
-			border-top-right-radius:0px;
-			padding:20px;
-			box-sizing:border-box;
-		}
-		#chat .conversation ul {
-			list-style:none;
-			padding:0;margin:0;
-		}
-		#chat .conversation li {
-			margin-bottom:15px;
-		}
-		#chat .conversation li .user {
-			display:inline-block;
-			border-radius:10px;
-			text-align:center;
-			font:12px/30px Helvetica, Arial;
-			font-weight:bold;
-			text-transform:uppercase;
-			background:#F1F1F1;
-			color:#000;
-			padding:5px 10px;
-			margin-right:10px;
-		}
-		#chat .conversation li .message {
-			position:relative;
-			background:#EEE;
-			border-radius:10px;
-			font:12px Helvetica, Arial;
-			color:#333;
-			padding:10px;
-			display:inline-block;
-		}
-		#chat .conversation li .message:before {
-			content:'';
-			display:block;
-			position:absolute;
-			top:50%;left:-5px;
-			transform:translateY(-50%);
-			width:0;
-			height:0;
-			border-style:solid;
-			border-width:5px 5px 5px 0;
-			border-color:transparent #EEE transparent transparent;
-		}
-		#chat .conversation li .timestamp {
-			display:block;
-			font:10px Helvetica, Arial;
-			color:#CCC;
-			padding-top:5px;
-		}
-		#chat .conversation li.mine {
-			text-align:right;
-		}
-		#chat .conversation li.mine .user {
-			float:right;
-			margin-right:0;
-			margin-left:10px;
-		}
-		#chat .conversation li.mine .message {
-			color:#FFF;
-			background:#007bff;
-		}
-		#chat .conversation li.mine .message:before {
-			left:auto;right:-5px;
-			border-width:5px 0 5px 5px;
-			border-color:transparent transparent transparent #007bff;
-		}
-		#chat input[type="text"] {
-			width:calc(100% - 110px);height:40px;
-			background:#FFF;
-			border-radius:20px;
-			border:0;
-			font:20px Helvetica, Arial;
-			color:#333;
-			float:left;
-			margin-right:10px;
-			box-sizing:border-box;
-			padding:0 20px;
-			outline:none;
-		}
-		#chat .error {
-			color:red;
-			display:none;
-			font:12px Helvetica, Arial;
-			padding:10px 20px;
-			float:left;
-		}
-		#chat button {
-			padding:0;margin:0;border:0;
-			float:left;
-			width:100px;height:40px;
-			background:#0666B5;
-			border-radius:20px;
-			font:16px Helvetica, Arial;
-			font-weight:bold;
-			color:#FFF;
-			text-align:center;
-			text-transform:uppercase;
-			cursor:pointer;
-			transition:background 0.25s linear;
-		}
-		#chat button:hover {
-			background:#2aadf3;
-		}
-		#chat button.red {
-			background:#d75252;
-		}
-		#chat button.red:hover {
-			background:#9c2525;
-		}
-		#chat .room {
-			background:#FFF;
-			border-radius:30px;
-			border-bottom-left-radius:0px;
-			border-bottom-right-radius:0px;
-			margin-bottom:2px;
-			height:60px;
-			padding:0 10px 0 20px;
-		}
-		#chat .room h2 {
-			font:30px/60px Helvetica, Arial;
-			color:#666;
-			margin:0;padding:0;
-			width:calc(100% - 220px);
-			float:left;
-		}
-		#chat .room h2 span {
-			color:#333;
-		}
-		#chat .room button {
-			margin-left:10px;
-			margin-top:10px;
-		}
-
-		#chat .message-box {
-			margin-top:10px;
-		}
-		#chat .username-box {
-			margin-bottom:10px;
-		}
-		#chat .room button {
-			float:right;
-		}
-		#chat .roomname-box {
-			margin:0 0 2px;
-			background:#FFF;
-			padding:10px;
-		}
-		#chat .roomname-box input[type="text"] {
-			background:#d2e6f7;
-		}
-	</style>
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body ng-app="myApp">
 
-	<form id="chat" name="chat" ng-controller="MainController">
+	<div id="chat" class="clearfix" ng-controller="MainController">
 
-		<h1>mini-chat</h1>
+		<div class="col col-content">
 
-		<div class="username-box clearfix" ng-hide="showme">
-			<input type="text" ng-model="username" id="inputUsername" name="inputUsername" placeholder="Type your nickname">
-			<button ng-click="setUsername()">OK</button>
-			<div class="validusername error">Enter a valid username</div>
+			<div class="box clearfix roomchooser" ng-class="{'animdont': _roomnameError}">
+				<div class="svg"><!-- --></div>
+
+				<input type="text" ng-model="myRoomname" id="inputRoomname" placeholder="Enter a room..." ng-click="typingRoom($event)" ng-keypress="typingRoom($event)">
+				<button ng-click="changeRoom()">Roomname</button>
+			</div>
+
+			<div class="box box-messages">
+
+				<div id="scrollmessages" class="allmessages">
+					<div class="filler"><!-- --></div>
+
+					<ul>
+					<li ng-repeat="msg in allMessages" ng-class="{
+						'me': msg.from == mySocketID,
+						'direct': msg.action == 'DIRECT',
+						'info': msg.action == 'INFO'
+					}">
+						<span class="timestamp">{{msg.timestamp}}</span>
+						<span class="message">
+							<span class="from">{{msg.from}}</span>
+							{{msg.message}}
+						</span>
+						<span class="action">{{msg.action}}</span>
+					</li>
+					</ul>
+
+					<div id="end"><!-- --></div>
+				</div>
+
+				<div class="somebodytyping">{{somebodyTyping}}</div>
+
+				<div class="clearfix messagebox" ng-class="{'animdont': _messageError}">
+					<input type="text" ng-model="message" id="inputMessage" placeholder="Type a message..." ng-click="typingMessage($event)" ng-keypress="typingMessage($event)">
+					<button ng-click="sendMessage()">Send</button>
+				</div>
+			</div>
+
 		</div>
 
-		<div class="room clearfix" ng-show="showme">
-			<h2 ng-hide="inroom">General room</h2>
-			<h2 ng-show="inroom">Room: <span>{{roomnameentered}}</span></h2>
-			<button ng-click="chooseRoom()" ng-hide="whichroom" ng-hide="inroom">Room</button>
-			<button ng-click="leaveRoom()" ng-show="inroom" class="red">Leave</button>
+		<div class="col col-side">
+
+			<h1>mini-chat</h1>
+
+			<div class="box participants">
+				<ul>
+				<li class="clearfix" ng-repeat="user in roomUsers | orderBy:'nickname'" ng-class="{'me': user.nickname == myNickname}">
+					<span class="ellipsis">{{user.nickname}}</span>
+					<button ng-click="sendDirect($event)" data-user="{{user.ID}}" data-nickname="{{user.nickname}}" ng-if="user.nickname != myNickname">Direct {{user.ID}}</button>
+				</li>
+				</ul>
+			</div>
+
+			<div class="box nicksetter" ng-class="{'animdont': _nicknameError}">
+				<h3>set nickname</h3>
+				<div class="clearfix">
+					<input type="text" ng-model="myNickname" id="inputNickname" placeholder="Set your nickname..." ng-click="typingNickname($event)" ng-keypress="typingNickname($event)">
+					<button ng-click="setNickname()">Nickname</button>
+				</div>
+			</div>
+
+			<div class="box chat-info">
+				{{totalUsers}} people connected<br>
+				{{totalRoomUsers}} in this room
+			</div>
+
 		</div>
 
-		<div class="roomname-box clearfix" ng-show="whichroom">
-			<input type="text" ng-model="roomname" id="inputRoomname" placeholder="Enter a room">
-			<button ng-click="joinRoom()">Join</button>
-			<div class="validroomname error">Enter a valid roomame</div>
-		</div>
 
-		<div class="conversation" ng-show="showme">
-			<ul>
-			</ul>
-		</div>
-
-		<div class="message-box clearfix" ng-show="showme">
-			<input type="text" ng-model="message" id="inputMessage" placeholder="Type a message...">
-			<button ng-click="send()">Send</button>
-			<div class="validmessage error">Enter a valid roomame</div>
-		</div>
-	</form>
+		<footer>USERNAME: {{myNickname}} | SOCKETID: {{mySocketID}}</footer>
 
 
+	</div>
 
-	<script src="js/jquery-3.3.1.min.js"></script>
+
 	<script src="js/angular.js"></script>
 	<script src="//localhost:3696/socket.io/socket.io.js"></script>
 	<script src="js/io.js"></script>
